--- a/PosApp/frontend/package.json
+++ b/PosApp/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-zxing": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
